# Scoute

./: .gitignore  README.md  app.py  main.py  pyproject.toml
graph/: research_graph.py
nodes/: evaluator.py  formatter.py  planner.py  searcher.py  synthesizer.py
prompts/: templates.py
state/: research_state.py
