[project]
name = "scoute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.6",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
